[package]
name = "workflow-html"
version = "0.1.0"
edition = "2021"

[dependencies]
workflow-html-macros={path="./macros"}
lazy_static="1.4.0"
regex = "1.0.0"

wasm-bindgen="*"
[dependencies.web-sys]
version = "0.3.56"
features = [
    'console',
    'Window',
    'Document',
    'Element',
    'Text',
    'HtmlCollection'
]
